# verfiyOpenCV

./: CMakeLists.txt  Quaternion.h  README.md  main.cpp  test_scale.cpp
